<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">idsAndroid</string>
    <string name="settings">系统设置</string>
    <string name="submit">提交</string>
    <string name="start_using">开始使用</string>
    <string name="loading">正在载入</string>
    <string name="net_error">网络错误!</string>
    <string name="require_login">请登录</string>
    <string name="fail">未知!</string>
    <string name="sql_error">数据库错误!</string>
    <string name="store">商户</string>
    <string name="service">服务</string>
    <string name="marker">标记</string>
    <string name="no_mall_given">请选择一家商场</string>
    <string name="cancel">取消</string>
    <string name="input_mall_name">请输入商户名称</string>
    <string name="shop_detail">商场详情</string>
    <string name="mymarkers">我的标记</string>
    <string name="search">搜索</string>
    <string name="start">起始位置</string>
    <string name="end">终止位置</string>
    <string name="loading_city">正在获取城市列表…</string>
    <string name="initialing">初始化数据…</string>
    <string name="loading_mall">正在获取商场信息…</string>
    <string name="loading_floor">正在获取楼层信息…</string>
    <string name="sns">社交</string>
    <string name="fail_to_locate_indoors">室内定位失败</string>
    <string name="turn_on_bt">请打开蓝牙设备</string>
    <string name="myposition">我的位置</string>
    <string name="fail_to_route_indoors">寻路失败</string>
    <string name="clear_cache">清除缓存</string>
    <string name="cache_clear_success">缓存已清除</string>
    <string name="city_list">城市列表</string>
    <string name="back">返回</string>
    <string name="launching_bt">正在启动蓝牙设备</string>
    <string name="no_such_city">暂无城市数据</string>
    <string name="detail">详情</string>
    <string name="go_into">进去逛逛</string>
    <string name="city">城市</string>
    <string name="me">我</string>
    <string name="nearby">附近</string>
    <string name="more">更多</string>
    <string name="top_city">常用城市</string>
    <string name="navi">导航</string>
    <string name="locating">正在定位</string>
    <string name="bluetooth_unavailable">蓝牙未开启</string>
    <string name="input_dest">输入终点</string>
    <string name="set_as_dest">设为终点</string>
</resources>